deploy/hackathon/env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-dcat-service 
  labels:
    app: atlas-dcat-service
spec:
  template:
    spec:
      containers:
        - name: atlas-dcat-service
