deploy/hackathon/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas-dcat-service
spec:
  rules:
    - host: "atlasdcat.staging.fellesdatakatalog.digdir.no"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-dcat-service
                port:
                  number: 8080
